@@ -226,11 +226,13 @@ ART = { ed_glob.ID_ABOUT  : u'about.png',
         ed_glob.ID_NEW    : u'new.png',
         ed_glob.ID_NEW_WINDOW: u'newwin.png',
         ed_glob.ID_NEXT_MARK : u'bmark_next.png',
+        ed_glob.ID_NEXT_POS : u'forward.png',
         ed_glob.ID_OPEN    : u'open.png',
         ed_glob.ID_PACKAGE : u'package.png',
         ed_glob.ID_PASTE   : u'paste.png',
         ed_glob.ID_PLUGMGR : u'plugin.png',
         ed_glob.ID_PRE_MARK : u'bmark_pre.png',
+        ed_glob.ID_PRE_POS : u'backward.png',
         ed_glob.ID_PREF    : u'pref.png',
         ed_glob.ID_PRINT   : u'print.png',
         ed_glob.ID_PRINT_PRE : u'printpre.png',
